--- a/client/src/style/Header.css
+++ b/client/src/style/Header.css
@@ -1,4 +1,4 @@
-.menu {
+/* .menu {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -80,7 +80,7 @@ form > button {
 
   top: 90%;
 }
-.resMenu > ul {
+.resMenu > .products > .products > ul {
   display: flex;
   justify-content: space-evenly;
   flex: 1;
@@ -116,4 +116,108 @@ form > button {
 }
 .contenu::-webkit-scrollbar {
   display: none;
+}
+ */
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body {
+  font-family: sans-serif;
+}
+.products > ul {
+  display: flex;
+  overflow-x: scroll;
+}
+
+@media only screen and (min-width: 600px) {
+  .products > ul {
+    justify-content: center;
+  }
+}
+.products > ul li {
+  list-style: none;
+}
+
+::-webkit-scrollbar {
+  width: 1px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f100;
+}
+::-webkit-scrollbar-thumb {
+  background: rgba(136, 136, 136, 0);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.products > ul li {
+  position: relative;
+  display: block;
+  text-transform: uppercase;
+  padding: 10px 20px;
+  text-decoration: none;
+  color: #262626;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI';
+  font-size: 10px;
+  font-weight: 600;
+  transition: 0.5s;
+  z-index: 1;
+}
+.products > ul li:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-top: 2px solid #262626;
+  border-bottom: 2px solid #262626;
+  transform: scaleY(2);
+  opacity: 0;
+  transition: 0.3s;
+}
+.products > ul li:after {
+  content: '';
+  position: absolute;
+  top: 2px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #191919;
+  transform: scale(0);
+  opacity: 0;
+  transition: 0.3s;
+  z-index: -1;
+}
+.products > ul li:hover {
+  color: #fff;
+}
+.products > ul li:hover:before {
+  transform: scaleY(1);
+  opacity: 1;
+}
+.products > ul li:hover:after {
+  transform: scaleY(1);
+  opacity: 1;
+}
+
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
 }
