re-Adjust navbar and add logo

--- a/client/src/style/Header.css
+++ b/client/src/style/Header.css
@@ -129,6 +129,10 @@ form > button {
 body {
   font-family: sans-serif;
 }
+.products {
+  margin-top: 56px;
+  margin-bottom: -54px;
+}
 .products > ul {
   display: flex;
   overflow-x: scroll;
