--- a/client/src/style/Header.css
+++ b/client/src/style/Header.css
@@ -137,6 +137,11 @@ body {
   display: flex;
   overflow-x: scroll;
 }
+@media only screen and (max-width: 600px) {
+  .logo {
+    zoom: 0.4 !important;
+  }
+}
 
 @media only screen and (min-width: 600px) {
   .products > ul {
@@ -168,8 +173,8 @@ body {
   padding: 10px 20px;
   text-decoration: none;
   color: #262626;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI';
-  font-size: 10px;
+  font-family: 'Lato';
+  font-size: 18px;
   font-weight: 600;
   transition: 0.5s;
   z-index: 1;
