cart ans shop services

--- a/client/src/style/Cart.css
+++ b/client/src/style/Cart.css
@@ -1,5 +1,5 @@
 .cart-sidebar {
-  background: #97999e none repeat scroll 0 0;
+  background: #fff;
   overflow: auto;
   position: fixed;
   right: -400px;
